# crypto-scan-machine

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  SYSTEM_PROMPT.md  UPGRADE_NOTES.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt  roadmap-status8.5.2026.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: admin.py  auth.py  health.py  projects.py  ws.py
app/core/: config.py  database.py  logging.py  redis.py  security.py
app/models/: __init__.py  analysis.py  base.py  onchain.py  project.py  timeseries.py  user.py
app/schemas/: admin.py  project.py
app/services/ai/: agent_learner.py  prompts.py  providers.py
app/services/alerts/: formatters.py  telegram_bot.py
app/services/collectors/: base.py  binance_launchpad.py  birdeye.py  bscscan.py  coingecko.py  coinmarketcap.py  cryptorank.py  daomaker.py  defillama.py  dexscreener.py  dextools.py  etherscan.py  geckoterminal.py  goplus.py  helius.py  jupiter.py  lunarcrush.py  pinksale.py  pumpfun.py  reddit.py  solscan.py  telegram.py  tokensniffer.py  twitter.py  youtube.py
app/services/scorers/: base.py  (+5 more)
app/tasks/: alert_tasks.py  celery_app.py  collector_tasks.py  scoring_tasks.py
app/utils/: rate_limiter.py
frontend/: Dockerfile.prod  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  index.css
monitoring/prometheus/: alerts.yml  prometheus.yml
nginx/: nginx.conf
nginx/conf.d/: default.conf
scripts/: backup.sh  deploy.sh  init-ssl.sh  init_db.sql
(+14 files in other folders)
